# Tufts_Create3_Examples

./: LICENSE  README.md  max_obstacles.py
Code/: README.md
Invisible_Springs/: README.md
OpenMV/: README.md  road_signs.py
Penalty_Shootout/: README.md  penalty_broken_code.py
Projects/: README.md
Python_Client_Example_Lib/: README.md
Python_Mini-Examples_Library/: Pub_Light_Pattern  README.md  package.xml  setup.cfg  setup.py
Telerobot_Example/: REAME.md
example_package/: README.md  package.xml  setup.cfg  setup.py
example_py/: package.xml  setup.py
invisible_springs/: README.md
joust/: README.md  arc1arc2.py  arc_turn_airtable.py  arc_with_turn.py  invsible_springs1.py  joust.py  joust_2.py  joust_b.py  joust_bumper.py  joust_wed.py  jst_arc.py  jst_arc_combo.py  jst_bump.py  linefollow.py  maddie_joust.py  stop_signs.py
jupyter_notebook_examples/: CLI_examples.ipynb  README.md  action_dock.ipynb  action_drive_square.ipynb  action_drive_square_2.ipynb  action_undock.ipynb  bump_rotate_test_jup.ipynb  combined_audio_bump.ipynb  combo.ipynb  mid_summer_demo.ipynb  penalty.ipynb  pub_ir.ipynb  pub_lightring.ipynb  square1.ipynb  sub.ipynb  sub_ir(1).ipynb  sub_ir.ipynb  test1.ipynb  test_batch.ipynb
mini_examples_library/: pub_light_pattern.py
penalty_shootout/: README.md  penalty_kick.py  shootout_broken_example.py
python_playground/: README.md  bumper_control.py  drive_square.py  instrument.py  invisible_springs.py  max_obstacles.py  proportional_controller.py
soccer_game/: README.md
telerobot_example/: README.md  REAME.md
(+54 files in other folders)
