<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mini_examples_library</name>
  <version>0.0.1</version>
  <description>Tufts University Mini-Examples for the iRobot® Create® 3 Educational Robot</description>
  <maintainer email="maddie.pero@tuftsceeo.org">maddiepero</maintainer>
  <license>BSD-3</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>irobot_create_msgs</depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
